gif again adding

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 Configurable double pendulum code to calculate paths, animate paths and calculate Lyapunov exponents and predictability times
-https://github.com/ishan2-physics/double_pendulum/blob/dc4656a854a824dea00e9e6bc42795c2e1d57bf2/double_pendulum120.120..gif
+![pendgif](.double_pendulum120.120..gif)
