--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Configurable double pendulum code to calculate paths, animate paths and calculate Lyapunov exponents and predictability times
-![pendgif](https://github.com/ishan2-physics/double_pendulum/blob/66bcda35baf1de4d88769f4a9b04585db2ca4940/double_pendulum120.120..gif)
+![pendgif](https://github.com/ishan2-physics/double_pendulum/blob/66bcda35baf1de4d88769f4a9b04585db2ca4940/double_pendulum120.120..gif?raw=true)
 
